# Flask-Projects

./: LICENSE  README.md
Basic/: app.py
Basic/templates/: admin_user.html  base.html  edit_profile.html  index.html  logout.html  register.html
Chat/: README.md
Flask-Nft/uploads/: 2_metadata.json
Music-Recommendation/: README.md
News/: README.md  config.py  pyproject.toml
News/static/: styles.css.map  styles.scss
Posts/: README.md  pyproject.toml
Posts/website/: auth.py  models.py  views.py
Posts/website/static/: index.js
Posts/website/templates/: base.html  create_post.html  home.html
Recipe/: README.md  pyproject.toml  routes.py
Recipe/templates/: admin_user.html  base.html  edit_recipe.html  login.html  logout.html  recipe.html  register.html
Taiwan_Air_Check/: README.md
Taiwan_Air_Check/src/: app.py
Users/: manage.py  pyproject.toml  run.py  wsgi.py
Users/app/: extensions.py
Users/app/schemas/: user_schema.py
Users/app/templates/: base.html  edit_profile.html  logout.html  owner_dashboard.html  profile.html
flask-projects-2024/: README.md
flask-projects-2024/Basic/: README.md  models.py  pyproject.toml  routes.py
flask-projects-2024/Basic/static/: styles.css
flask-projects-2024/Basic/templates/: admin.html  login.html  profile.html
flask-projects-2024/Basic/tests/: test_app.py
flask-projects-2024/Chat/: main.py  pyproject.toml
flask-projects-2024/Flask-Nft/: README.md
flask-projects-2024/Medical-Consultation/: README.md
flask-projects-2024/News/: app.py  package.json
flask-projects-2024/News/static/: styles.css
flask-projects-2024/News/templates/: base.html  index.html
flask-projects-2024/Posts/: README.md
flask-projects-2024/Posts/website/: __init__.py
flask-projects-2024/Recipe/: app.py  config.py  models.py
flask-projects-2024/Stock-Prediction/: README.md
flask-projects-2024/Taiwan_Air_Check/: README.md  pyproject.toml
flask-projects-2024/Taiwan_Air_Check/src/templates/: index.html
flask-projects-2024/Users/: README.md  config.py
(+23 files in other folders)
