[tool.poetry]
name = "basic001"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-mail = "^0.10.0"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.7.1"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
